fixed cta overflow. no hover on item empty space

--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,7 @@ section > p {
     height: 90px;
     background-color: var(--bg-cta);
     z-index: 9;
+    overflow: auto;
 }
 
 .cta .btn {
@@ -227,6 +228,7 @@ border-bottom: var(--border-green) 2px solid;
     margin-right: 1rem;
     margin-bottom: 1rem;
     text-align: center;
+    align-self: flex-start;
 }
 .item .cover-box{
     position: relative;
